--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Welcome to Artin Spiridonoff's Homepage!
+description: Here, you can learn more about my projects.
